# tagenerator

./: LICENSE  README.md  essay_fi.md  tagenerator.cabal
examplegame/: crosspoint.ta  deadend.ta  entrance.ta  examplegame.ta  smallroom.ta  storageroom.ta
src/: Main.hs
src/TaGenerator/: AstParser.hs  CommandParser.hs  CommonParsers.hs  DocumentParser.hs  FileParser.hs  GameEngine.hs  Parser.hs  TaAstParser.hs  TaCheck.hs  TaData.hs  TaDocumentParser.hs  TaParser.hs
