name:                tagenerator
version:             0.1.0.0
synopsis:            Simple text adventure generator made with Haskell
homepage:            https://github.com/jkpl/tagenerator
license:             MIT
license-file:        LICENSE
author:              Jaakko Pallari
maintainer:          jkpl@lepovirta.org
copyright:           Jaakko Pallari
category:            Game
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md

executable tagenerator
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base > 3, mtl > 2, directory > 1, filepath > 1, text > 0.1, containers > 0.4
  hs-source-dirs:      src